Prevent page breaks in tables with CSS

--- a/inst/outbreak-template.css
+++ b/inst/outbreak-template.css
@@ -532,6 +532,10 @@ div#container > div#sidebar {
     page-break-inside: avoid;
   }
 
+  table {
+    page-break-inside: avoid;
+  }
+
 div#container > div#footer {
   width: 21.59cm;
   height: 2cm;
